--- a/PaySpace.Calculator.API/PaySpace.Calculator.API.csproj
+++ b/PaySpace.Calculator.API/PaySpace.Calculator.API.csproj
@@ -8,7 +8,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
           <PrivateAssets>all</PrivateAssets>
@@ -18,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PaySpace.Calculator.Services\PaySpace.Calculator.Services.csproj" />
+      <ProjectReference Include="..\PaySpace.Calculator.Business\PaySpace.Calculator.Business.csproj" />
         <ProjectReference Include="..\PaySpace.Calculator.Data\PaySpace.Calculator.Data.csproj" />
     </ItemGroup>
 
@@ -29,8 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Models\" />
-      <Folder Include="Responses\" />
+      <Folder Include="Database\" />
     </ItemGroup>
 
 </Project>
