--- a/PaySpace.Calculator.Web/appsettings.json
+++ b/PaySpace.Calculator.Web/appsettings.json
@@ -1,10 +1,10 @@
 {
   "CalculatorSettings":{
-    "ApiUrl":"https://localhost:7119"
+    "ApiUrl":"https://localhost:44389"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
